--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <script src="etch-a-sketch.js" defer></script>
     </head>
     <body>
+        <div id="btn">
+            <button type="button" onclick="makeGrid()">Make a new grid</button>
+        </div>
         <div id="grid-container">
         </div>
     </body>
-</html>
-     
-            
+</html>            
